# demand-forecasting-inventory

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
outputs/: lgbm_model.txt
src/: data_loader.py  feature_engineering.py  inventory.py  preprocessing.py
src/models/: baseline.py  lgbm_model.py  prophet_model.py  sarima_model.py
